syntax = "proto3";

import "google/protobuf/empty.proto";

package party;

service PartyServer {
  rpc watch(WatchRequest) returns (google.protobuf.Empty);
  rpc joinParty(WatchPartyRequest) returns (PartyResponse);
  rpc pauseParty(WatchParty) returns (PartyResponse);
  rpc playParty(WatchParty) returns (PartyResponse);
  rpc endPart(WatchParty) returns (PartyResponse);
}

message WatchRequest {
    string clientId = 1;
    string videoId = 2;
    int64 time = 3;
}

message WatchPartyRequest {
}

message WatchParty {
}

message PartyResponse {

}

message VideoInfo {
    int32 id = 1;
    string title = 2;
}
